--- a/projeDenem.html
+++ b/projeDenem.html
@@ -2,6 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hedef 4</title>
 	<script type="text/javascript">
 
