--- a/projeDenem.html
+++ b/projeDenem.html
@@ -215,7 +215,7 @@
 		.cik{
 			position: absolute; 
 			top:50px; 
-			left:1200px;
+			left:800px;
 		}
 		.cik:hover{
 			opacity: 0.7;
@@ -225,7 +225,7 @@
 		.tekrar{
 			position: absolute; 
 			top:400px; 
-			left:1200px;
+			left:800px;
 
 
 		}
@@ -238,7 +238,7 @@
 		.ses{
 			position: absolute; 
 			top:200px; 
-			left:1200px;
+			left:800px;
 
 		}
 				.ses:hover{
@@ -249,8 +249,8 @@
 		}
 				.ses2{
 			position: absolute; 
-			top:; 
-			left:1200px;
+			top:300px; 
+			left:800px;
 
 		}
 				.ses2:hover{
