--- a/projeDenemeTahtasi.html
+++ b/projeDenemeTahtasi.html
@@ -116,7 +116,7 @@
 			function oyunuBitir(kazanankisi) {
 				oyunKontrolu = false; 
 				if(kazanankisi == 1){ //kırmızı kazandııysa
-				document.getElementById('kazananBilgisi').innerHTML = " <img id='winner' src='kirmizi2.png' style='visible'>"; 
+				document.getElementById('kazananBilgisi').innerHTML = " <img id='winner' src='kirmizi.png' style='visible'>"; 
 				
 				
 
