--- a/projeDenemeTahtasi.html
+++ b/projeDenemeTahtasi.html
@@ -122,7 +122,7 @@
 
 				}
 				else if(kazanankisi == 2){ //kazanan sari ise
-				document.getElementById('kazananBilgisi').innerHTML = " <img id='winner' src='sari5.png' >"; 
+				document.getElementById('kazananBilgisi').innerHTML = " <img id='winner' src='sari.png' >"; 
 				
 				
 
